# autoduck

./: .gitignore  anthropic_token_usage.json  api_client.py  code_executor.py  context_manager.py  core.py  email_handler.py  git_handler.py  index.html  local_token_usage.json  logging_config.py  main.py  planning.py  processed_emails.json  pyproject.toml  report.md  token_tracker.py  token_usage.json
generated_snippets/: connect_000.py  connect_001.py  connect_002.py  connect_003.py  connect_004.py  connect_006.py  connect_007.py  connect_008.py  connect_009.py  connect_010.py  connect_011.py  connect_012.py  connect_013.py  other_000.py  other_001.py  other_002.py  other_003.py  other_004.py  other_005.py  other_006.py  other_007.py  other_008.py  other_009.py  other_010.py  other_011.py  other_012.py  other_013.py  other_015.py  other_016.py  other_017.py  other_018.py  other_019.py  other_020.py  other_021.py  other_022.py  other_023.py  other_024.py  other_025.py  other_026.py  other_027.py  (+156 more)
tasks/: task_000.md  task_001.md  task_002.md  task_003.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  task_011.md  task_012.md  task_013.md  task_014.md  task_015.md  task_016.md  task_017.md  task_018.md  task_019.md  task_020.md  task_021.md  task_022.md  task_023.md  task_024.md  task_025.md  task_026.md  task_027.md  task_028.md  task_029.md  task_030.md  task_031.md  task_032.md  task_033.md  task_034.md  task_035.md  task_036.md  task_037.md  task_038.md  task_039.md  task_040.md  (+40 more)
