[project]
name = "autoduck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "duckdb>=1.2.1",
    "instructor[anthropic]>=0.6.7",
    "messages[anthropic]>=0.7.1",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pyperclip>=1.9.0",
    "pywin32>=309",
]
